# multimodal-semantic-grouping-search

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
notebooks/: openclip-fine-tuning-pipeline.ipynb
scripts/: amazon_extractor.py  attribute_analysis.py  ingest_products.py
scripts/amazon_scraper/: _driver.py  scrape.py  scrape_details.py
src/api/: admin.py  routes.py  scraper.py
src/core/: config.py  database.py  ingestion.py  ml_model.py
static/: admin.html  index.html  tailwind.config.js
static/js/: compare.js  detail.js  gallery.js  global.css  state.js
