[project]
name = "fyp-clip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.1",
    "lxml>=6.1.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "requests>=2.33.1",
    "selenium>=4.43.0",
    "uvicorn>=0.46.0",
]
